# parkinson_detection_backend

./: Dockerfile  README.md  main.py  parkinson_core_services_uk.csv  pyproject.toml  requirements.txt  sessions.csv  vercel.json
api/: index.py  main.py
api/model_feature_analysis/: saint_model.pt  saint_preproc.joblib
model_feature_analysis/: lightgbmmodel.pkl  scaler.pkl
