[project]
name = "parkinson-detection-backend"
version = "0.1.0"
description = "parkinson-detection-backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "librosa>=0.11.0",
    "lightgbm>=4.6.0",
    "numpy>=1.23.2",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "uvicorn>=0.37.0",
]
